--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,6 +6,32 @@
   --background: #ffffff;
   --foreground: #171717;
 }
+/* Hide scrollbar for Chrome, Safari and Edge */
+::-webkit-scrollbar {
+  display: none;
+}
+::-webkit-scrollbar-thumb {
+  display: none;
+}
+/* Optional: Prevent layout shift */
+body {
+  -ms-overflow-style: none; /* Hide scrollbar for IE and Edge */
+  scrollbar-width: none; /* Hide scrollbar for Firefox */
+}
+
+body {
+  color: var(--foreground);
+
+  background: linear-gradient(
+    180deg,
+    #000000 0%,
+    #0a2e3c 50%,
+    #082f3e 75%,
+    #0a2e3c 88%,
+    #1e1e1e 100%
+  );
+  font-family: Arial, Helvetica, sans-serif;
+}
 
 @media (prefers-color-scheme: dark) {
   :root {
@@ -13,9 +39,117 @@
     --foreground: #ededed;
   }
 }
+/* For devices with a width up to 480px (common mobile devices) */
+@media (max-width: 480px) {
+  .main-wrapper {
+    width: 100%;
+    min-height: 100vh;
+    display: flex;
+    align-items: start;
+    justify-content: center;
+    margin: 10px auto;
+    flex-direction: column;
+    gap: 20px;
+  }
+  .hero-section {
+    margin: 0 auto;
+    width: 70%;
+    min-height: 65vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 30px;
+    .img {
+      width: 100%;
+      height: auto;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      img {
+        width: 70%;
+      }
+    }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+    .text {
+      text-align: center;
+      h2 {
+        font-size: 5vw;
+        font-weight: 600;
+      }
+      p {
+        font-size: 5vw;
+        padding: 5px 0;
+
+        font-weight: 400;
+      }
+    }
+    .likefoloow {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      gap: 50px;
+    }
+    .button {
+      padding: 0.7em 3em;
+      border-radius: 5px;
+      margin-top: 20px;
+      border: 1px solid #0293a6;
+      background-color: #27445d;
+    }
+  }
+  .folllowers,
+  .likes {
+    display: flex;
+    gap: 5px;
+  }
+  .feature-section {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    margin: 0 auto;
+  }
+  .feature {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    /* background: #f0f0f0; */
+    border-radius: 10px;
+    padding: 20px;
+    text-align: center;
+    gap: 5px;
+  }
+
+  .feature img {
+    width: 90%;
+  }
+
+  .feature p {
+    font-weight: bold;
+    font-size: 1.1rem;
+  }
+  .feature-heading {
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin-left: 33px;
+  }
+  .contact-section {
+    width: 90%;
+    background: transparent;
+    border: 1px solid #0293a6;
+    border-radius: 5px;
+    margin: 10px auto;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    p {
+      font-size: 1rem;
+    }
+    .c-line {
+      display: flex;
+      gap: 5px;
+      font-size: 0.9rem;
+    }
+  }
 }
