--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -131,6 +131,7 @@ body {
   .feature-heading {
     font-size: 1.5rem;
     font-weight: 500;
+    margin-bottom: -20px;
     margin-left: 33px;
   }
   .contact-section {
